# termle

./: README.md  pyproject.toml  requirements.txt
app/: cli.py
app/commands/: browse.py  google.py  search.py  word.py
termsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
