[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termle"
version = "0.1.0"
description = "Your CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk",
    "deep-translator"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app"]

[tool.setuptools.package-data]
app = ["nltk_data/**/*"]
